--- a/deployapp.yml
+++ b/deployapp.yml
@@ -4,7 +4,7 @@
    become: true
    tasks:
    - name: deploy app
-     command: kubectl apply -f deployment.yml
+     command: kubectl create deployment healthcare --image=snehalatha15/healthcare:latest
    - name: sleeping
      command: sleep 20
    - name: ServiceFile
